# soughbreighittee

./: .editorconfig  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/agents/: ThieveryModeBot.md
soughbreighittee/: __init__.py  cli.py  database.py  models.py
tests/: test_basic.py
