[metadata]
name = soughbreighittee
version = 0.1.0
description = Comprehensive Harm Reduction and Addiction Recovery App for Opiates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VpkDevs/soughbreighittee
author = Soughbreighittee Contributors
license = Unlicense
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.
    License :: Public Domain
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.1.0
    colorama>=0.4.6
    rich>=13.0.0
    pydantic>=2.0.0
    python-dateutil>=2.8.0

[options.entry_points]
console_scripts =
    soughbreighittee = soughbreighittee.cli:cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs,*.egg-info
ignore = E203,W503
